# Vision-Dataset-Studio

./: .gitignore  README.md  USAGE.md  api_caption_client.py  bootstrap_env.py  caption_client.py  caption_service.py  dataset_exporter.py  dataset_projects.py  dataset_workspace.py  install-offline.bat  install.bat  install.sh  ollama_caption_client.py  pyproject.toml  run.bat  run.sh  start.sh  web_app.js  web_index.html  web_server.py  web_styles.css
.github/workflows/: ci.yml
captioning/: __init__.py  api_caption_client.py  caption_client.py  caption_image_preprocess.py  caption_service.py  ollama_caption_client.py  prompt_common.py
config/: environment.caption-codex.yml  prompt_templates.example.json  settings.py
core/: __init__.py  caption_text_utils.py  dataset_exporter.py  dataset_image_processor.py  dataset_paths.py  dataset_projects.py  dataset_workspace.py  prompt_templates.py  qwen_models.py  workspace_batch.py  workspace_items.py  workspace_paths.py  workspace_scanner.py  workspace_state.py
docs/: PROJECT_CONTEXT_SUMMARY.txt  USAGE.md
frontend/: app.js  index.html  package-lock.json  package.json  styles.css  tsconfig.json  vite.config.ts  web_bootstrap.js  web_browser.js  web_caption.js  web_editor.js  web_image_ops.js  web_projects.js  web_shared.js  web_shell.js
frontend/shared/: drag.js  keyboard.js  wsClient.js
frontend/state/: ai.ts  caption.ts  projects.ts  ui.ts  workspace.ts
frontend/types/: deps.ts  state.d.ts
launcher/: README.md  package-lock.json  package.json
launcher/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.macos.conf.json
launcher/src-tauri/capabilities/: default.json
launcher/src-tauri/permissions/: launcher.toml
launcher/src-tauri/src/: main.rs
launcher/tools/: generate_vds_icon.py
launcher/ui/: index.html  (+2 more)
legacy/: lora_reviewer.py  vision_dataset_reviewer.py
requirements/: base.txt  offline-base.txt  qwen-common.txt  qwen-cu126.txt  qwen-offline-cu124-py312-win64.txt
scripts/: install.bat  install.sh  run.bat  start.sh
server/: app.py  caption_workflow.py  dependencies.py  export_jobs.py  image_process_jobs.py  job_manager.py  web_server.py
tests/: test_caption_file_name_context.py  test_dataset_exporter.py  test_dataset_projects.py  test_dataset_workspace.py  test_fastapi_routes.py  test_ollama_caption_client.py  test_web_server.py  test_web_server_routes.py
tools/: bootstrap_env.py  rebuild_cursors.py
(+28 files in other folders)
