[package]
name = "vision-dataset-studio-launcher"
version = "0.1.0"
description = "Lightweight launcher for Vision Dataset Studio"
authors = ["Vision Dataset Studio"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png"] }
url = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
